fix(app controller): avoid deleting namespaces while deleting apps
