# public/swagger.json
@@ -4165,27 +4165,6 @@
 			},
 			"WorkspaceInputData": {
 				"properties": {
-					"project": {
-						"anyOf": [
-							{
-								"$ref": "#/components/schemas/Types.ObjectId"
-							},
-							{
-								"$ref": "#/components/schemas/IProject"
-							},
-							{
-								"type": "string"
-							}
-						],
-						"description": "ID of the project"
-					},
-					"slug": {
-						"type": "string",
-						"description": "Slug of an item, generated automatically by its \"name\""
-					},
-					"active": {
-						"type": "boolean"
-					},
 					"name": {
 						"type": "string",
 						"description": "Name of the workspace."
@@ -7952,7 +7931,7 @@
 				}
 			},
 			"delete": {
-				"operationId": "Delete",
+				"operationId": "SoftDelete",
 				"responses": {
 					"200": {
 						"description": "Ok",
